ultimos cambios alv

--- a/round02/css/materialize.css
+++ b/round02/css/materialize.css
@@ -8738,6 +8738,11 @@ main {
     display: block !important;
   }
 
+  .carousel.carousel-slider {
+    height: 200vmax !important;
+    min-height: 100vmax;
+  }
+
   main {
     padding-left: 0;
   }
