--- a/round02/css/materialize.scss
+++ b/round02/css/materialize.scss
@@ -670,6 +670,10 @@ main {
     .sidenav-close {
         display: block !important;
     }
+    .carousel.carousel-slider {
+        height: 200vmax!important;
+        min-height: 100vmax;
+    }
     main {
         padding-left: 0;
     }
