--- a/round02/css/materialize.scss
+++ b/round02/css/materialize.scss
@@ -30,7 +30,7 @@ h5 {
     min-height: 100%!important;
     height: 100%;
     background-size: auto;
-    // background-image: url('../img/login.jpg');
+    background-image: url('../img/login.jpg');
     background-position: center 0;
     background-attachment: fixed;
     padding: 8rem;
@@ -80,9 +80,11 @@ h5 {
     }
     form {
         box-shadow: 0rem 0rem 1.5rem 0rem #d1d1d1;
-        margin-left: -6rem;
+        margin-left: -5rem;
         padding: 3rem;
-        background: white;
+        background: $white;
+        position: relative;
+        right: -150%;
         .btn,
         .btn:hover,
         .btn-small:hover,
