--- a/round02/css/materialize.scss
+++ b/round02/css/materialize.scss
@@ -30,7 +30,7 @@ h5 {
     min-height: 100%!important;
     height: 100%;
     background-size: auto;
-    background-image: url('../img/login.jpg');
+    /* background-image: url('../img/login.jpg'); */
     background-position: center 0;
     background-attachment: fixed;
     padding: 8rem;
