--- a/round02/css/materialize.scss
+++ b/round02/css/materialize.scss
@@ -688,6 +688,7 @@ main {
         background-attachment: fixed;
         form {
             margin-left: 0;
+            right: 0;
         }
         img {
             display: block;
