--- a/round01/css/materialize.css
+++ b/round01/css/materialize.css
@@ -8115,9 +8115,9 @@ h5 {
   width: 65%;
   min-height: 100% !important;
   height: 100%;
-  background-size: auto;
-  background-image: url("../img/login.jpg");
-  background-position: 10% 0;
+  background-size: cover;
+  background-image: url("../img/login2.jpg");
+  background-position: center;
   background-attachment: fixed;
   padding: 8rem;
   color: #ffffff;
@@ -8138,9 +8138,21 @@ h5 {
 .bloque01 a {
   color: #ffffff;
 }
+.bloque01 p {
+  background: rgba(255, 255, 255, 0.4);
+  color: #4e4e4e;
+  padding: 1rem;
+  border-radius: 0.3rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  -ms-border-radius: 0.3rem;
+  -o-border-radius: 0.3rem;
+}
 
 #form {
   position: relative;
+  top: -200%;
+  opacity: 0;
 }
 
 .bloque02 {
@@ -8765,9 +8777,17 @@ main {
   }
   .bloque02 img {
     display: block;
+    height: 5rem;
+    width: auto;
   }
   .bloque02 h3 {
     display: block;
+  }
+
+  #form {
+    position: relative;
+    top: 0;
+    opacity: 1;
   }
 }
 #video_background {
@@ -8796,6 +8816,103 @@ main {
 .carousel.carousel-slider {
   height: 100vw;
   min-height: 100vw;
+}
+
+/* ondas */
+.clink {
+  margin-bottom: 2rem;
+}
+
+.pinkBg {
+  background-color: #ffffff !important;
+  background-image: linear-gradient(-45deg, #00a1dd 26%, #eb007a 50%, #f79032 75%, #005b17 100%);
+}
+
+.intro-banner-vdo-play-btn {
+  height: 120px;
+  width: 120px;
+  position: absolute;
+  text-align: center;
+  margin: -60px 0 0 -60px;
+  border-radius: 50%;
+  z-index: 1;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.intro-banner-vdo-play-btn:hover {
+  opacity: 0.7;
+}
+
+.intro-banner-vdo-play-btn svg {
+  /*     line-height:56px; */
+  font-size: 60px;
+  color: #fff;
+  margin: 14px 0 0 4px;
+}
+
+.intro-banner-vdo-play-btn img {
+  width: 120px;
+}
+
+.intro-banner-vdo-play-btn .ripple {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  z-index: -1;
+  left: 50%;
+  top: 50%;
+  opacity: 0;
+  margin: -100px 0 0 -100px;
+  border-radius: 50%;
+  -webkit-animation: ripple 1.8s infinite;
+  animation: ripple 1.8s infinite;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+}
+@keyframes ripple {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+}
+.intro-banner-vdo-play-btn .ripple:nth-child(2) {
+  animation-delay: 0.3s;
+  -webkit-animation-delay: 0.3s;
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(3) {
+  animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
 }
 
 /*# sourceMappingURL=materialize.css.map */
