--- a/round01/css/materialize.scss
+++ b/round01/css/materialize.scss
@@ -29,9 +29,9 @@ h5 {
     width: 65%;
     min-height: 100%!important;
     height: 100%;
-    background-size: auto;
-    background-image: url('../img/login.jpg');
-    background-position: 10% 0;
+    background-size: cover;
+    background-image: url('../img/login2.jpg');
+    background-position: center;
     background-attachment: fixed;
     padding: 8rem;
     color: $white;
@@ -51,10 +51,22 @@ h5 {
     a {
         color: $white;
     }
+    p {
+        background: rgba($white, 0.4);
+        color: $dark;
+        padding: 1rem;
+        border-radius: 0.3rem;
+        -webkit-border-radius: 0.3rem;
+        -moz-border-radius: 0.3rem;
+        -ms-border-radius: 0.3rem;
+        -o-border-radius: 0.3rem;
+    }
 }
 
 #form {
     position: relative;
+    top: -200%;
+    opacity: 0;
 }
 
 .bloque02 {
@@ -693,10 +705,17 @@ main {
         }
         img {
             display: block;
+            height: 5rem;
+            width: auto;
         }
         h3 {
             display: block;
         }
+    }
+    #form {
+        position: relative;
+        top: 0;
+        opacity: 1;
     }
 }
 
@@ -726,4 +745,107 @@ main {
 .carousel.carousel-slider {
     height: 100vw;
     min-height: 100vw;
+}
+
+
+/* ondas */
+
+.clink {
+    margin-bottom: 2rem;
+}
+
+.pinkBg {
+    background-color: $white!important;
+    background-image: linear-gradient(-45deg, rgba($alta, 1) 26%, rgba($busqueda, 1) 50%, rgba($administracion, 1) 75%, rgba($reportes, 1) 100%);
+}
+
+.intro-banner-vdo-play-btn {
+    height: 120px;
+    width: 120px;
+    position: absolute;
+    text-align: center;
+    margin: -60px 0 0 -60px;
+    border-radius: 50%;
+    z-index: 1;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.intro-banner-vdo-play-btn:hover {
+    opacity: .7;
+}
+
+.intro-banner-vdo-play-btn svg {
+    /*     line-height:56px; */
+    font-size: 60px;
+    color: #fff;
+    margin: 14px 0 0 4px;
+}
+
+.intro-banner-vdo-play-btn {
+    img {
+        width: 120px;
+    }
+}
+
+.intro-banner-vdo-play-btn .ripple {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    z-index: -1;
+    left: 50%;
+    top: 50%;
+    opacity: 0;
+    margin: -100px 0 0 -100px;
+    border-radius: 50%;
+    -webkit-animation: ripple 1.8s infinite;
+    animation: ripple 1.8s infinite;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+@-webkit-keyframes ripple {
+    0% {
+        opacity: 1;
+        -webkit-transform: scale(0);
+        transform: scale(0)
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+@keyframes ripple {
+    0% {
+        opacity: 1;
+        -webkit-transform: scale(0);
+        transform: scale(0)
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(2) {
+    animation-delay: .3s;
+    -webkit-animation-delay: .3s
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(3) {
+    animation-delay: .6s;
+    -webkit-animation-delay: .6s
 }
