--- a/round02/css/materialize.scss
+++ b/round02/css/materialize.scss
@@ -692,6 +692,8 @@ main {
         }
         img {
             display: block;
+            height: 5rem;
+            width: auto;
         }
         h3 {
             display: block;
@@ -702,7 +704,7 @@ main {
 #video_background {
     position: absolute;
     bottom: 0px;
-    right: 0px;
+    right: 25%;
     min-width: 100%;
     min-height: 100%;
     width: auto;
@@ -725,4 +727,101 @@ main {
 .carousel.carousel-slider {
     height: 100vw;
     min-height: 100vw;
+}
+
+
+/* ondas */
+
+.clink {
+    margin-bottom: 5rem;
+}
+
+.pinkBg {
+    background-color: $white!important;
+    background-image: linear-gradient(-45deg, rgba($white, 1) 26%, rgba($white, 1) 50%, rgba($white, 1) 75%, rgba($white, 1) 100%);
+}
+
+.intro-banner-vdo-play-btn {
+    height: 120px;
+    width: 120px;
+    position: absolute;
+    text-align: center;
+    margin: -60px 0 0 -60px;
+    border-radius: 50%;
+    z-index: 1;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.intro-banner-vdo-play-btn:hover {
+    opacity: .7;
+}
+
+.intro-banner-vdo-play-btn svg {
+    /*     line-height:56px; */
+    font-size: 60px;
+    color: #fff;
+    margin: 14px 0 0 4px;
+}
+
+.intro-banner-vdo-play-btn {
+    img {
+        width: 120px;
+    }
+}
+
+.intro-banner-vdo-play-btn .ripple {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    z-index: -1;
+    left: 50%;
+    top: 50%;
+    opacity: 0;
+    margin: -100px 0 0 -100px;
+    border-radius: 50%;
+    -webkit-animation: ripple 1.8s infinite;
+    animation: ripple 1.8s infinite;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+@-webkit-keyframes ripple {
+    0% {
+        opacity: 1;
+        -webkit-transform: scale(0);
+        transform: scale(0)
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(1);
+        transform: scale(1)
+    }
+}
+
+@keyframes ripple {
+    0% {
+        opacity: 1;
+        -webkit-transform: scale(0);
+        transform: scale(0)
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: scale(1);
+        transform: scale(1)
+    }
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(2) {
+    animation-delay: .3s;
+    -webkit-animation-delay: .3s
+}
+
+.intro-banner-vdo-play-btn .ripple:nth-child(3) {
+    animation-delay: .6s;
+    -webkit-animation-delay: .6s
 }
